--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,8 +32,8 @@ services:
       context: .
       dockerfile: app.dockerfile
       args:
-        - NEXT_PUBLIC_API_URL=http://127.0.0.1:3001/api
-        - NEXT_PUBLIC_WS_URL=ws://127.0.0.1:3001
+        - NEXT_PUBLIC_API_URL=https://konectunalanda.in/api
+        - NEXT_PUBLIC_WS_URL=wss://konectunalanda.in/ws
     depends_on:
       - perplexica-backend
     ports:
