--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_WS_URL=ws://localhost:3001
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
+NEXT_PUBLIC_WS_URL=wss://konectunalanda.in/ws
+NEXT_PUBLIC_API_URL=https://konectunalanda.in/api
